SNC-4541 : Help icon themed

--- a/src/MEGASync/gui/Resources_linux.qrc
+++ b/src/MEGASync/gui/Resources_linux.qrc
@@ -1510,5 +1510,6 @@
         <file>images/themed/light/checkbox_checked.svg</file>
         <file>images/themed/light/combobox_down_arrow.svg</file>
         <file>images/themed/dark/combobox_down_arrow.svg</file>
+        <file>images/help-icon.svg</file>
     </qresource>
 </RCC>
