--- a/src/MEGASync/gui/Resources_win.qrc
+++ b/src/MEGASync/gui/Resources_win.qrc
@@ -1529,5 +1529,6 @@
         <file>images/settings-sync.svg</file>
         <file>images/settings-sync-warn.svg</file>
         <file>images/folder.svg</file>
+        <file>images/help-icon.svg</file>
     </qresource>
 </RCC>
