SNC-4541 : Fix bug on multiple icon color mask application.

--- a/src/MEGASync/gui/Resources_linux.qrc
+++ b/src/MEGASync/gui/Resources_linux.qrc
@@ -1511,5 +1511,7 @@
         <file>images/themed/light/combobox_down_arrow.svg</file>
         <file>images/themed/dark/combobox_down_arrow.svg</file>
         <file>images/help-icon.svg</file>
+        <file>images/plus.svg</file>
+        <file>images/minus.svg</file>
     </qresource>
 </RCC>
