--- a/src/MEGASync/syncs/gui/Twoways/linux/SyncStallModeSelector.ui
+++ b/src/MEGASync/syncs/gui/Twoways/linux/SyncStallModeSelector.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>359</width>
+    <width>360</width>
     <height>154</height>
    </rect>
   </property>
@@ -44,7 +44,7 @@ font-size: 12px;
     <number>0</number>
    </property>
    <item>
-    <widget class="QGroupBox" name="groupBox">
+    <widget class="QGroupBox" name="findGroup">
      <property name="styleSheet">
       <string notr="true">#SmartSelector, #AdvanceSelector
 {
