SNC-4541 : Added radio button component.

--- a/src/MEGASync/gui/Resources_win.qrc
+++ b/src/MEGASync/gui/Resources_win.qrc
@@ -1532,5 +1532,13 @@
         <file>images/help-icon.svg</file>
         <file>images/minus.svg</file>
         <file>images/plus.svg</file>
+        <file>images/themed/dark/checkbox_checked.svg</file>
+        <file>images/themed/dark/combobox_down_arrow.svg</file>
+        <file>images/themed/dark/radio_checked.svg</file>
+        <file>images/themed/dark/radio_unchecked.svg</file>
+        <file>images/themed/light/checkbox_checked.svg</file>
+        <file>images/themed/light/combobox_down_arrow.svg</file>
+        <file>images/themed/light/radio_checked.svg</file>
+        <file>images/themed/light/radio_unchecked.svg</file>
     </qresource>
 </RCC>
