--- a/src/MEGASync/gui/Resources_linux.qrc
+++ b/src/MEGASync/gui/Resources_linux.qrc
@@ -1513,5 +1513,9 @@
         <file>images/help-icon.svg</file>
         <file>images/plus.svg</file>
         <file>images/minus.svg</file>
+        <file>images/themed/light/radio_unchecked.svg</file>
+        <file>images/themed/light/radio_checked.svg</file>
+        <file>images/themed/dark/radio_unchecked.svg</file>
+        <file>images/themed/dark/radio_checked.svg</file>
     </qresource>
 </RCC>
