--- a/src/MEGASync/gui/linux/RemoteItemUi.ui
+++ b/src/MEGASync/gui/linux/RemoteItemUi.ui
@@ -53,44 +53,7 @@
       <item>
        <widget class="QTableView" name="tableView">
         <property name="styleSheet">
-         <string notr="true">QTableView
-{
-background: white;
-outline: 0;
-border: 1px solid #D8D8D8;
-}
-
-QTableView::item
-{
-border: none;
-padding-left:4px;
-}
-
-QTableView::item::selected
-{
-background-color: rgba(0,120,215,0.8);
-color:white;
-}
-
-QHeaderView
-{
-background: #FFFFFF;
-padding-top: 2px;
-}
-
-QHeaderView::section {
-background: #FFFFFF;
-color: #4A607A;
-padding-left:6px;
-border-top:0 px;
-border-bottom:0px;
-border-left:0px;
-border-right:0px ;
-}
-
-QHeaderView::section:last {
-border-right:0px;
-}</string>
+         <string notr="true"/>
         </property>
         <property name="frameShape">
          <enum>QFrame::NoFrame</enum>
